k8s/deployment-django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deploy
  namespace: django-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django
          image: chlwjddn/django-k8s-app:latest
          imagePullPolicy: IfNotPresent
          command: ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
          ports:
            - containerPort: 8000
