k8s/service-django.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: django-app
spec:
  type: ClusterIP
  selector:
    app: django
  ports:
    - name: http
      port: 8000
      targetPort: 8000
